This should fix crashes due to bad initialization. Completely untested. Might help with ticket #3241

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42453 a95241bf-73f2-0310-859d-f6bbb57e9c96